testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/case2.expect.out
error: unknown start of token: \u{0000}
  ==> case2.cj:13:8:
   | 
13 |     var a \u{0000} 1
   |           ^^^^^^^^ unknown start of token: \u{0000}
   | 

1 error generated, 1 error printed.
